--- a/ProjectSquad/Info.plist
+++ b/ProjectSquad/Info.plist
@@ -71,6 +71,11 @@
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app requires using location</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
