--- a/ProjectSquad/Info.plist
+++ b/ProjectSquad/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>Squad</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -32,7 +32,7 @@
 	<key>FacebookAppID</key>
 	<string>227957517541453</string>
 	<key>FacebookDisplayName</key>
-	<string>ProjectSquad</string>
+	<string>Squad</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
