--- a/ProjectSquad/Info.plist
+++ b/ProjectSquad/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.05</string>
+	<string>1.07</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -70,7 +70,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app requires using location</string>
+	<string>This app requires background location to let your Squad know where you are</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
